--- a/components/insert-mac-row.html
+++ b/components/insert-mac-row.html
@@ -38,8 +38,8 @@
             <md-input-container md-no-float class="md-block padding-right-10-px margin-bottom-0">
                 <label>{{lang.type}}</label>
                 <md-select ng-model="insertMac.type">
-                    <md-option ng-value=1>UWB</md-option>
-                    <md-option ng-value=0>BLUETOOTH</md-option>
+                    <md-option ng-value=1>{{lang.uwb}}</md-option>
+                    <md-option ng-value=0>{{lang.bluetooth}}</md-option>
                 </md-select>
             </md-input-container>
 
