--- a/components/login.html
+++ b/components/login.html
@@ -22,7 +22,7 @@
                             <img src="img/icons/login-icon-outer.png" class="avatar-image border-radius-50 spin-logo-right"
                                  alt="Smart Track" title="Smart Track">
                         </div>
-                        <div layout="row" layout-align="center center" class="padding-bottom-10 margin-top-150px position-absolute">
+                        <div layout="row" layout-align="center center" class="padding-bottom-10 margin-top-90 position-absolute">
                             <h1 class=" font-iceberg font-x-large margin-none margin-top-150px">SAFETY IoT PLATFORM</h1>
                         </div>
                     </div>
