--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,29 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.25.2 Aggiornamenti e fix generici</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Rimosso il messaggio di fail quando la tabella degli rfid e vuota</span><br>
+                            <span class="color-green text-bold">Fixato il updataDrawingCanvas non trovato</span><br>
+                            <span class="color-green text-bold">Implementata la gestione per la qualle non posso assegnare un raggio per le location indoor</span><br>
+                            <span class="color-green text-bold">Cambiato il colore del titolo per la finestra legenda</span><br>
+                            <span class="color-green text-bold">Aggiustata la tabella delle zono outddor</span><br>
+                            <span class="color-green text-bold">Aggiustato il pulsante switch per il disegno delle zone outdoor</span><br>
+                            <span class="color-green text-bold">Gestito l'inserimento dei tag con tipo non valido</span><br>
+                            <span class="color-green text-bold">Rimossa la voce Nessuno nel select dei tipi di tag</span><br>
+                            <span class="color-green text-bold">Gestito l'inserimento delle ancore con tipo non valido</span><br>
+                            <span class="color-green text-bold">Aggiustato il testo della pagina login che andava sopra il logo</span><br>
+                        </td>
+                        <td md-cell>23/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.25.1 Allarme tag senza coordinate valide outdoor</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la visualizzazione degli allarmi per i tag senza coordinate valide outdoor</span><br>
+                        </td>
+                        <td md-cell>22/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.25.0 ALLARMI OUTDOOR PER UTENTE LOGATO</td>
                         <td md-cell>
                             <span class="color-green text-bold">Adesso la campana degli allarmi compare solo per i tag che sono all'interno di una location dell'utente logato, oppure sono fuori da tutte le locatio (anche quelle degli altri utenti)</span><br>
