--- a/components/zone-table.html
+++ b/components/zone-table.html
@@ -28,7 +28,7 @@
 <!--end popup header-->
 
 <!--popup content-->
-<md-content class="popup-padding padding-bottom-70px">
+<md-content class="popup-padding min-widht-500px padding-bottom-70px">
 
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
@@ -142,7 +142,7 @@
         </md-table-container>
 
         <md-input-container
-                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 margin-bottom-50-px margin-top-0"
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-17-px zindex-100 margin-bottom-50-px margin-top-0"
                 md-no-float ng-show="isAdmin">
             <div ng-if="isOutdoor" layout="row" layout-align="center end">
                 <button ng-click="addNewRectRow()" class="md-button" layout="row" layout-align="center center">
