V 3.26.0 TAGS WITHOUT POSITION UPDATE
- Changed the logic of showing the errors for tags without a position

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,14 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.26.0 Cambiata la logica degli allarmi per tag senza posizione</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Rimossa la visualizzazione dell'allarme tag senza posizione</span><br>
+                            <span class="color-green text-bold">Cambiato il funzionamento di vai al sito per tag con -1 e -1</span><br>
+                        </td>
+                        <td md-cell>22/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.25.2 Aggiornamenti e fix generici</td>
                         <td md-cell>
                             <span class="color-green text-bold">Rimosso il messaggio di fail quando la tabella degli rfid e vuota</span><br>
