V 3.27.0 TAGS AND ALARMS
- Inserted time now for user tags
- Implemented the visualizzation of the offline tags for empty battery
- Tags table shows only the user tags
- Added the TRACKING and search wetag to tracking user
- Removed the audio for tags that belong to other users

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,17 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.27.0 Gestione allarmi e tag indoor</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Inserito il campo time_now anche per i tag indoor</span><br>
+                            <span class="color-green text-bold">Implementata la visualizzazione dei tag offline anche per batteria scarica</span><br>
+                            <span class="color-green text-bold">Implementata la visualizzazione all'interno della tabella dei tag considerando solo i tag dell'utente</span><br>
+                            <span class="color-green text-bold">Aggiunte le sezioni tracking e cerca tag per l'utente tracking</span><br>
+                            <span class="color-green text-bold">Rimosso l'audio per allarmi che non appartengono all'utente</span><br>
+                        </td>
+                        <td md-cell>22/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.26.0 Cambiata la logica degli allarmi per tag senza posizione</td>
                         <td md-cell>
                             <span class="color-green text-bold">Rimossa la visualizzazione dell'allarme tag senza posizione</span><br>
