--- a/components/canvas.html
+++ b/components/canvas.html
@@ -225,7 +225,7 @@
                                          alt=""></md-list-item>
                             </md-list>
 
-                            <div ng-show="isAdmin" id="search-tag-container" layout="column" class="padding-10-px"
+                            <div ng-show="canvasCtrl.isAdmin || canvasCtrl.isTracker" id="search-tag-container" layout="column" class="padding-10-px"
                                  layout-align="center center">
 
                                 <md-input-container class="margin-bottom-0 margin-top-10 width-100">
