--- a/components/home.html
+++ b/components/home.html
@@ -99,7 +99,7 @@
                                 <md-list-item ng-click="viewHistory('home')" class="font-smal"><p>{{lang.history | uppercase}}</p><img
                                         src="img/icons/menu/history-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-show="homeCtrl.isAdmin" ng-click="viewTracking('home')" class="font-smal"><p>{{lang.tracking | uppercase}}</p><img
+                                <md-list-item ng-show="homeCtrl.isAdmin || homeCtrl.isTracker" ng-click="viewTracking('home')" class="font-smal"><p>{{lang.tracking | uppercase}}</p><img
                                         src="img/icons/menu/tracking-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
                                 <md-list-item ng-show="homeCtrl.isAdmin" class="font-smal" ng-click="viewVersions()" ng-show="true"><p>
@@ -128,7 +128,7 @@
                                         alt=""></md-list-item>
                             </md-list>
 
-                            <div ng-show="isAdmin" id="change-floor-container" layout="column" class="padding-10-px"
+                            <div ng-show="homeCtrl.isAdmin || homeCtrl.isTracker" id="change-floor-container" layout="column" class="padding-10-px"
                                  layout-align="center center">
 
                                 <md-input-container class="margin-bottom-0 margin-top-10">
