--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -106,7 +106,7 @@
                                         alt=""></md-list-item>
                             </md-list>
 
-                            <div ng-show="isAdmin" id="change-floor-container" layout="column" class="padding-10-px"
+                            <div ng-show="outdoorCtrl.isAdmin || outdoorCtrl.isTracker" id="change-floor-container" layout="column" class="padding-10-px"
                                  layout-align="center center">
 
                                 <md-input-container class="margin-bottom-0 margin-top-10">
