V 3.28.0  HISTORY AND TRACKING
- Implemented the visualizzation of the history only for user tags
- Implemented the visualizzation of the tracking only for the user tags

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.28.0 History e Tracking user tags</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la visualizzazione della history e del tracking solo per i tag dell'utente logato</span><br>
+                        </td>
+                        <td md-cell>27/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.27.0 Gestione allarmi e tag indoor</td>
                         <td md-cell>
                             <span class="color-green text-bold">Inserito il campo time_now anche per i tag indoor</span><br>
@@ -47,7 +54,7 @@
                             <span class="color-green text-bold">Aggiunte le sezioni tracking e cerca tag per l'utente tracking</span><br>
                             <span class="color-green text-bold">Rimosso l'audio per allarmi che non appartengono all'utente</span><br>
                         </td>
-                        <td md-cell>22/08/2020</td>
+                        <td md-cell>26/08/2020</td>
                     </tr>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.26.0 Cambiata la logica degli allarmi per tag senza posizione</td>
