--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.29.0 Reimplementazione History e Tracking</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Cambiata la logica della tabella history</span><br>
+                            <span class="color-green text-bold">Cambiata la logica della tabella tracking</span><br>
+                            <span class="color-green text-bold">Rimossi i -1 dalle due tablelle</span><br>
+                        </td>
+                        <td md-cell>30/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.28.0 History e Tracking user tags</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementata la visualizzazione della history e del tracking solo per i tag dell'utente logato</span><br>
