--- a/components/tracking-table.html
+++ b/components/tracking-table.html
@@ -99,10 +99,10 @@
                         <td md-cell class="no-wrap" ng-class="{'md-placeholder': !row.anchor}">{{row.anchor || lang.noData}}
                         </td>
                         <td md-cell class="no-wrap" ng-class="{'md-placeholder': !row.tag_x_pos.toString()}">
-                            {{row.tag_x_pos.toString() || lang.noData}}
+                            {{row.tag_x_pos === -1 ? lang.positionNotValid : row.tag_x_pos || lang.noData}}
                         </td>
                         <td md-cell class="no-wrap" ng-class="{'md-placeholder': !row.tag_y_pos.toString()}">
-                            {{row.tag_y_pos.toString() || lang.noData}}
+                            {{row.tag_y_pos === -1 ? lang.positionNotValid : row.tag_y_pos || lang.noData}}
                         </td>
                         <td md-cell class="no-wrap" ng-class="{'md-placeholder': !row.protocol.toString()}">
                             {{row.protocol.toString() || lang.noData}}
