V 3.30.0 PHP SOCKET TIMER
- Implemented the updating time on php socket

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.30.0 Aggiornamento tempo chiamate socket php</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementato l'aggiornamento del tempo su file externo se il socket continua a ricevere messaggi</span><br>
+                        </td>
+                        <td md-cell>30/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.29.0 Reimplementazione History e Tracking</td>
                         <td md-cell>
                             <span class="color-green text-bold">Cambiata la logica della tabella history</span><br>
