V 3.30.1 CLOSE SOCKET BUTTON
- Implemented the close socket button in login page on debug mode

--- a/components/login.html
+++ b/components/login.html
@@ -73,13 +73,13 @@
                  class="font-smal width-200-px margin-lr-auto margin-bottom-50-px cursor-pointer background-transparent-white padding-10-px">
                 <p class="text-underlined text-center text-bold margin-none">{{lang.recoverPassword}}</p>
             </div>
+            <button ng-click='closeSocket()' style='position: fixed; top: 0; left: 0'>Chiudi Socket</button>
             <div class="font-smal margin-lr-auto cursor-pointer background-transparent-white padding-10-px position-fixed bottom-0 left-10 width-80">
                 <p class="text-bold font-large text-center color-black">La vostra sicurezza è la nostra priorità</p>
                 <p class="text-center text-bold margin-none">Oggi nel mondo ogni 15 secondi, 1 lavoratore muore e 153
                     lavoratori hanno un incidente sul lavoro,
                     (fonte ILO, Organizzazione internazionale del lavoro).</p>
             </div>
-
         </div>
     </div>
 </div>
