--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,16 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.31.0 Implementato le opzione per il telefono e le operazioni CRUD</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementate le opzioni per il telefono lato database</span><br>
+                            <span class="color-green text-bold">Implementato le operazioni CRUD per le opzioni telefono</span><br>
+                            <span class="color-green text-bold">Implementato l'aggiornamento in tempo reale della tabella superUsers</span><br>
+                            <span class="color-green text-bold">Aggiustata la visualizzazione della tabella userManager</span><br>
+                        </td>
+                        <td md-cell>30/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.30.0 Aggiornamento tempo chiamate socket php</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato l'aggiornamento del tempo su file externo se il socket continua a ricevere messaggi</span><br>
