--- a/components/zone-table.html
+++ b/components/zone-table.html
@@ -28,7 +28,7 @@
 <!--end popup header-->
 
 <!--popup content-->
-<md-content class="popup-padding min-widht-500px padding-bottom-70px">
+<md-content class="popup-padding min-width-500px padding-bottom-70px">
 
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
