V 3.31.1 RESET PHONE OPTIONS
- Implemented the reset of the phone options if I delete the phone

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.31.1 Reset delle opzioni telefono</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementato il reset delle opzioni del telefono se il telefono viene cancellato</span><br>
+                        </td>
+                        <td md-cell>3/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.31.0 Implementato le opzione per il telefono e le operazioni CRUD</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementate le opzioni per il telefono lato database</span><br>
@@ -46,7 +53,7 @@
                             <span class="color-green text-bold">Implementato l'aggiornamento in tempo reale della tabella superUsers</span><br>
                             <span class="color-green text-bold">Aggiustata la visualizzazione della tabella userManager</span><br>
                         </td>
-                        <td md-cell>30/08/2020</td>
+                        <td md-cell>2/09/2020</td>
                     </tr>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.30.0 Aggiornamento tempo chiamate socket php</td>
