--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.32.1 Cambiato il formato della data di socket timer</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Cambiato il formatop della data di socket timer in 24 h</span><br>
+                        </td>
+                        <td md-cell>7/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.31.1 Reset delle opzioni telefono</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato il reset delle opzioni del telefono se il telefono viene cancellato</span><br>
