--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,16 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.33.0 Autologin e altre modifiche</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Cambiata la logica dell'autologin</span><br>
+                            <span class="color-green text-bold">Cambiata la posizione della colonna mac ancora</span><br>
+                            <span class="color-green text-bold">Implementata la cancellazione delle location di un utente cancellato</span><br>
+                            <span class="color-green text-bold">L'utente amministratore puo' inserire altri utenti amministratori</span><br>
+                        </td>
+                        <td md-cell>10/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.32.1 Cambiato il formato della data di socket timer</td>
                         <td md-cell>
                             <span class="color-green text-bold">Cambiato il formatop della data di socket timer in 24 h</span><br>
