--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,16 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.34.0 Messenger id e encription</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementato il campo messenger_id con le operazioni crud</span><br>
+                            <span class="color-green text-bold">Fatto l'encriptiong dei dati nel cookie e userStorage</span><br>
+                            <span class="color-green text-bold">Scritto sul log login falito</span><br>
+                            <span class="color-green text-bold">Non faccio autologin se username e passord sono vuote</span><br>
+                        </td>
+                        <td md-cell>10/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.33.0 Autologin e altre modifiche</td>
                         <td md-cell>
                             <span class="color-green text-bold">Cambiata la logica dell'autologin</span><br>
