--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,14 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.35.0 Messaggio Aggiornamento</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Inserito il messaggio per aggiornare l'applicazione quando c'e una nuova versione</span><br>
+                            <span class="color-green text-bold">Faccio il controllo dei cookie e se non sono apposto vado nella login e faccio vedere messaggio alert</span><br>
+                        </td>
+                        <td md-cell>18/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.34.0 Messenger id e encription</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato il campo messenger_id con le operazioni crud</span><br>
