--- a/components/canvas.html
+++ b/components/canvas.html
@@ -196,6 +196,10 @@
                                     uppercase}}</p><img
                                         src="img/icons/menu/anchor-icon.ico"
                                         class="menu-list-icon menu-icon" alt=""></md-list-item>
+                                <md-list-item class="font-smal" ng-click="showControllAccessTable()"><p>{{lang.controllAccess |
+                                    uppercase}}</p><img
+                                        src="img/icons/menu/anchor-controll-access-icon.ico"
+                                        class="menu-list-icon menu-icon" alt=""></md-list-item>
                                 <md-list-item class="font-smal" ng-click="floorUpdate()"><p>{{lang.floorTable |
                                     uppercase}}</p><img
                                         src="img/icons/menu/floor-icon.ico" class="menu-list-icon menu-icon"
@@ -210,6 +214,10 @@
                                 <md-list-item class="font-smal" ng-click="viewHistory('canvas')"><p>{{lang.history |
                                     uppercase}}</p><img
                                         src="img/icons/menu/history-icon.ico" class="menu-list-icon menu-icon"
+                                        alt=""></md-list-item>
+                                <md-list-item class="font-smal" ng-click="viewAccessHistory('canvas')"><p>{{lang.accessHistory |
+                                    uppercase}}</p><img
+                                        src="img/icons/menu/access-history-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
                                 <md-list-item class="font-smal" ng-click="quickActions()"><p>{{lang.quickActions |
                                     uppercase}}</p><img
