--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.36.0 Controllo accessi</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la nuova tipologia di ancore nel canvas e nelle tablelle con tutte le operazioni e le icone</span><br>
+                            <span class="color-green text-bold">Implementata la tabella gestione controllo accessi con le operazioni CRUD</span><br>
+                            <span class="color-green text-bold">Implementata la hisotry del controllo anccessi con i relativi filtri, la delete e la save</span><br>
+                        </td>
+                        <td md-cell>21/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.35.0 Messaggio Aggiornamento</td>
                         <td md-cell>
                             <span class="color-green text-bold">Inserito il messaggio per aggiornare l'applicazione quando c'e una nuova versione</span><br>
